--- a/ramkill.service
+++ b/ramkill.service
@@ -5,7 +5,7 @@ Before=shutdown.target reboot.target halt.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/sdmem -f -l -v
+ExecStart=/usr/bin/sdmem -f -l 
 TimeoutSec=0
 RemainAfterExit=true
 
